# rust-sdk

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  structs.rs  tests.rs  v1.rs
src/structs/: client.rs  user.rs
