[package]
name = "tsar-client"
version = "0.0.5"
description = "Official wrapper for the TSAR Client API"
repository = "https://github.com/tsar-sec/rust-wrapper"
keywords = ["api", "framework", "windows", "macos", "linux"]
categories = ["api-bindings"]
authors = ["x <x@tsar.cc>"]
homepage = "https://tsar.cc/"
edition = "2021"
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
reqwest = { version = "0.11.0", features = ['json', 'blocking'] }
serde_json = { version = "1" }
serde = { version = "1", features = ['derive'] }
open = "5.0.0"
thiserror = "1.0.0"
base64 = "0.22.0"
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
hardware-id = "0.3.0"
rsntp = "4.0.0"

# Obfuscation
debugoff = { version = '0.2.2', features = ['obfuscate', 'syscallobf'] }
goldberg = "0.1.0"

# Anti-debug Release
[profile.release]
stack-protector = true
strip = "symbols"
panic = "abort"
opt-level = 3
debug = false
lto = true
cfi = true
