[package]
name = "tsar-sdk"
version = "0.1.0-beta.2"
description = "Official Rust SDK for TSAR"
repository = "https://github.com/tsarnet/rust-sdk"
keywords = ["api", "framework", "windows", "macos", "linux"]
categories = ["api-bindings"]
authors = ["x <x@tsar.cc>"]
homepage = "https://tsar.cc/"
edition = "2021"
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]


[dependencies]
reqwest = { version = "0.11", features = ['json', 'blocking'] }
p256 = { version = "0.13", features = ["ecdsa-core"] }
serde = { version = "1", features = ['derive'] }
serde_json = { version = "1" }
hardware-id = "0.3"
thiserror = "1"
base64 = "0.22"
rsntp = "4"
open = "5"
sha2 = "0.10"
